--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ h3
     color: white;
 } 
 
-input[type=text], select, textarea {
+input[type=text], [type=email],select, textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
