--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ h3
   color: #4CAF50;   
   
 }
-/* Create three equal columns that floats next to each other */
+/* Create 2 columns that floats next to each other */
 .maintext {
   float: left;
   width: 72%;
