--- a/style.css
+++ b/style.css
@@ -174,6 +174,11 @@ h3
     background: transparent;
 }
 
+input[type='radio']:checked + label
+{
+    color:#4CAF50;
+    font-weight: bold;
+}
 .contact_text
 {
    font-family:Lato, Helvetica, sans-serif;
