--- a/style.css
+++ b/style.css
@@ -11,6 +11,16 @@ body {
   top: 0;
   width: 100%;
 }
+#contact-box
+{
+    position: fixed;
+    font-family:Trebuchet Ms, Helvetica, sans-serif ;
+    font-size: 11px;
+    color: white;
+    right: 40px;
+    top: 3px;
+    line-height: 95%;
+}
 
 .navbar a {
   float: left;
@@ -84,16 +94,6 @@ body {
   
 }
 
-#contact-box
-{
-    position: fixed;
-    font-family:Trebuchet Ms, Helvetica, sans-serif ;
-    font-size: 11px;
-    color: white;
-    right: 40px;
-    top: 3px;
-    line-height: 95%;
-}
 
 .banner
 {
@@ -159,7 +159,19 @@ h3
             linear-gradient(127deg, rgba(0,255,0,.8), rgba(0,255,0,0) 70.71%),
             linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
   box-shadow: 10px 10px 27px 0px rgba(76,175,80,1);
+  -webkit-transition: width 2s, height 2s, -webkit-transform 2s; /* Safari */
+  transition: width 2s, height 2s, transform 2s;
+}
 
+
+.coursebox:hover {
+  width: 300px;
+  background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
+            linear-gradient(127deg, rgba(0,255,0,.8), rgba(0,255,0,0) 70.71%),
+            linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
+  -webkit-transform: rotate(360deg); /* Safari */
+  transform: rotate(360deg);
+  transition: ease-out 1s;
 }
 
 .column1
@@ -170,7 +182,7 @@ h3
   margin-right: 1%;
   text-align: justify;
  }
-
+ 
  .aboutme
  {
    border-left: solid;
@@ -226,13 +238,12 @@ input[type='radio']:checked + label
     font-family: verdana;
     font-weight: bold;
     color: #3b3a30;
-    
-}
+    }
 
-.submit_button:hover
+.submit_button:hover , .btt:hover
 {   background-color: #4CAF50;
     color: white;
-} 
+     transform: translate(1px, -1px);}
 
 input[type=text], [type=email],select, textarea {
   width: 100%;
@@ -305,4 +316,17 @@ ul {
     background-image: url('img/bird.jpg');
     background-size: cover;
     background-color: rgba(204,204,204, 0,3)
+}
+ .course2block
+ {
+    background-size: 80%;
+    margin: inherit;
+    background-color: floralwhite;
+    border-radius: 2%;
+    opacity: 0.9;
+ }
+
+    .links 
+    {
+    text-decoration: none;
 }
