--- a/style.css
+++ b/style.css
@@ -101,21 +101,18 @@ body {
    margin-bottom: 12px;
 }
 
-h1
+h1, h2
 {
     top: 40px;
-    text-align: center;
     color: #4CAF50;
 }
 
-h2
+h1, h3
 {
-    top: 40px;
-    color: #4CAF50; 
+    text-align: center; 
 }
 h3
 {
-  text-align: center;
   font-size: 17px;
   color: #4CAF50;   
   
