--- a/style.css
+++ b/style.css
@@ -353,3 +353,75 @@ ul {
     {
     text-decoration: none;
 }
+/* CUBE ROTATE START */ 
+       #scene
+        {
+            float: right;
+            width: 200px;
+            height: 200px;
+            margin: 0px 50px 20px 80px ;
+            position:  relative;
+            perspective: 1000px;
+        }
+        
+        #cube
+        {position: absolute;
+        transform-style: preserve-3d;
+        width: 100%;
+        height: 100%;
+        animation: cuberotate 7s infinite alternate;
+        }
+        .side
+        {
+            opacity: 0.9;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            font-size: 20px;
+            color: white;
+            font-weight: bold;
+            line-height: 200px;
+            text-align: center;
+        }
+        div.front
+        {
+            background-color: #39CCCC;
+            transform: translateZ(100px);
+        }
+        div.back
+        {
+            background-color: #001f3f;
+            transform: rotateX(180deg) translateZ(100px);
+        }
+        div.left
+        {
+            background-color: #01FF70;
+            transform: rotateY(-90deg) translateZ(100px);
+        }
+        div.right
+        {
+            background-color: #3D9970;
+            transform: rotateY(90deg) translateZ(100px);
+        }
+        div.top
+        {
+            background-color: #7FDBFF;
+            transform: rotateX(90deg) translateZ(100px);
+        }
+        div.bottom
+        {
+            background-color: #85144b;
+            transform: rotateX(-90deg) translateZ(100px);
+        }
+        @keyframes cuberotate
+        {
+            from
+            {
+                
+            }
+            to
+            {
+                transform: rotateY(360deg) rotateX(360deg);
+            }
+        }
+        /* CUBE ROTATE END */ 
